test/black-box/v14/2.exp
[Line 6] Semantic error: Attribute galhos used but not initialized.
