test/black-box/v14/2.toc
obj Arvore()
  pub int galhos

void toc()
  Arvore a()
  int b = a.galhos
